Add gimbal lock animation

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -694,7 +694,8 @@
     "of $\\phi$ and $\\psi$ with constant sum. In roll-pitch-yaw convention,\n",
     "pitches of $\\pm \\pi/2$ align the roll and yaw axes, and hence when a\n",
     "vehicle is pointed directly upward there are an infinite number of\n",
-    "solutions for $\\phi$ and $\\psi$.\n",
+    "solutions for $\\phi$ and $\\psi$. Multiple solutions for pointing upward\n",
+    "are shown in the animation below and can be extrapolated to infinite solutions.\n",
     "\n",
     "Cases like this are known as *singular*. By analogy with the gimbal\n",
     "mechanism which is a physical device with three rotating axes, *gimbal\n",
@@ -703,7 +704,10 @@
     "absolute orientation as its cradle rotates. Gimbal lock manifests itself\n",
     "when two axes of the mechanism become aligned, at which point the gimbal\n",
     "readings become useless because most rotations of the cradle fail to\n",
-    "de-align the axes properly.\n",
+    "de-align the axes properly. The gimbal lock problem is illustrated \n",
+    "in the animation below where two axis become aligned.\n",
+    "\n",
+    "<video src=\"https://github.com/sujaygarlanka/RoboticSystemsBook/raw/refs/heads/master/animations/media/modelling/Gimbal3D.mp4\" width=\"500\" height=\"300\" controls></video>\n",
     "\n",
     "In calculations, singularities cause problems for conversions,\n",
     "calculating derivatives, and interpolation.\n",
