--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -1892,7 +1892,7 @@
     "to obtain a quadratic order of convergence for most \"well-behaved\"\n",
     "functions. An animation of Newton's method is shown below.\n",
     "\n",
-    "<video src=\"https://github.com/sujaygarlanka/RoboticSystemsBook/raw/refs/heads/master/animations/media/modelling/NewtonsMethod1D.mp4\" width=\"500\" height=\"300\" controls></video>\n",
+    "<video src=\"https://github.com/sujaygarlanka/RoboticSystemsBook/raw/refs/heads/master/animations/media/modeling/NewtonsMethod1D.mp4\" width=\"500\" height=\"300\" controls></video>\n",
     "\n",
     "\n",
     "In the multidimensional case, we seek the next iterate\n",
@@ -2990,7 +2990,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "robotics-book",
    "language": "python",
    "name": "python3"
   },
@@ -3004,7 +3004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
