Add trapezoid decomposition animation

--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -414,7 +414,9 @@
     "To find a path given a trapezoidal decomposition, it suffices to find the cells in which the start and goal are located, then search for a path containing the start and goal.  The continuous path is constructed by connecting the midpoints between each cell. Because each path segment is completely contained within the cell, and because trapezoids are convex, the path is guaranteed to be feasible.  Hence, the trapezoidal decomposition algorithm is complete but not optimal.\n",
     "Simple modifications of the vertical coordinates\n",
     " --- straightening the path when possible --- can be made to find the\n",
-    "shortest path passing through the cells produced by the algorithm.  However, the sequence of cells may indeed miss the true shortest path.\n",
+    "shortest path passing through the cells produced by the algorithm.  However, the sequence of cells may indeed miss the true shortest path. \n",
+    "\n",
+    "An animated explanation of the process described above can be found here <video src=\"https://github.com/sujaygarlanka/RoboticSystemsBook/raw/refs/heads/master/animations/media/motion_planning/trapezoid_decomp.mp4\" width=\"500\" height=\"300\" controls></video>.\n",
     "\n",
     "### Approximate cell decomposition\n",
     "\n",
@@ -4045,7 +4047,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "robotics-book",
    "language": "python",
    "name": "python3"
   },
@@ -4059,7 +4061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
