Fix trapezoid decomposition animation

--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -416,7 +416,9 @@
     " --- straightening the path when possible --- can be made to find the\n",
     "shortest path passing through the cells produced by the algorithm.  However, the sequence of cells may indeed miss the true shortest path. \n",
     "\n",
-    "An animated explanation of the process described above can be found here <video src=\"https://github.com/sujaygarlanka/RoboticSystemsBook/raw/refs/heads/master/animations/media/motion_planning/trapezoid_decomp.mp4\" width=\"500\" height=\"300\" controls></video>.\n",
+    "An animated explanation of the process described above can be found here \n",
+    "\n",
+    "<video src=\"https://github.com/sujaygarlanka/RoboticSystemsBook/raw/refs/heads/master/animations/media/motion_planning/TrapezoidDecomp.mp4\" width=\"500\" height=\"300\" controls></video>.\n",
     "\n",
     "### Approximate cell decomposition\n",
     "\n",
