--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -1890,7 +1890,9 @@
     "good fit to $f$, then the next iteration gets very close to the root. In\n",
     "this case we say that the method *converges*. In fact, it can be proven\n",
     "to obtain a quadratic order of convergence for most \"well-behaved\"\n",
-    "functions.\n",
+    "functions. An animation of Newton's method is shown below.\n",
+    "\n",
+    "<video src=\"https://github.com/krishauser/RoboticSystemsBook/raw/refs/heads/master/animations/media/modeling/NewtonsMethod1D.mp4\" width=\"500\" height=\"300\" controls></video>\n",
     "\n",
     "In the multidimensional case, we seek the next iterate\n",
     "$\\mathbf{q}_{i+1} = \\mathbf{q}_i + \\Delta \\mathbf{q}_i$ to solve the following Taylor\n",
@@ -2987,7 +2989,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "robotics-book",
    "language": "python",
    "name": "python3"
   },
@@ -3001,7 +3003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
