--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -1892,7 +1892,7 @@
     "to obtain a quadratic order of convergence for most \"well-behaved\"\n",
     "functions. An animation of Newton's method is shown below.\n",
     "\n",
-    "<video src=\"https://github.com/krishauser/RoboticSystemsBook/raw/refs/heads/master/animations/media/modeling/NewtonsMethod1D.mp4\" width=\"500\" height=\"300\" controls></video>\n",
+    "<video src=\"./animations/media/modeling/NewtonsMethod1D.mp4\" width=\"500\" height=\"300\" controls></video>\n",
     "\n",
     "In the multidimensional case, we seek the next iterate\n",
     "$\\mathbf{q}_{i+1} = \\mathbf{q}_i + \\Delta \\mathbf{q}_i$ to solve the following Taylor\n",
@@ -2989,7 +2989,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "robotics-book",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3003,7 +3003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
