Add gimbal lock animation

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -703,10 +703,13 @@
     "absolute orientation as its cradle rotates. Gimbal lock manifests itself\n",
     "when two axes of the mechanism become aligned, at which point the gimbal\n",
     "readings become useless because most rotations of the cradle fail to\n",
-    "de-align the axes properly.\n",
+    "de-align the axes properly. The gimbal lock problem is illustrated\n",
+    "in the animation below where two axes become aligned.\n",
     "\n",
     "In calculations, singularities cause problems for conversions,\n",
     "calculating derivatives, and interpolation.\n",
+    "\n",
+    "<video src=\"animations/media/modeling/Gimbal3D.mp4\" width=\"500\" height=\"300\" controls></video>\n",
     "\n",
     "### Inversion\n",
     "\n",
@@ -1276,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      0
@@ -1360,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      0
