Add marching cubes

--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -6006,7 +6006,9 @@
     "Occupancy grids are often converted to triangle meshes by outputting a\n",
     "rectangle when an occupied cell borders an unoccupied one. This has the\n",
     "effect of creating a jagged \"stair step\" appearance because each face is\n",
-    "axis-aligned.\n"
+    "axis-aligned. See the animation below for an example.\n",
+    "\n",
+    "<video src=\"./animations/media/modeling/MarchingCubes.mp4\" width=\"500\" height=\"300\" controls></video>\n"
    ]
   },
   {
