Add trapezoid decomposition

--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -416,6 +416,10 @@
     " --- straightening the path when possible --- can be made to find the\n",
     "shortest path passing through the cells produced by the algorithm.  However, the sequence of cells may indeed miss the true shortest path.\n",
     "\n",
+    "An animated explanation of the process described above can be found here\n",
+    "\n",
+    "<video src=\"animations/media/motion_planning/TrapezoidDecomp.mp4\" width=\"500\" height=\"300\" controls></video>\n",
+    "\n",
     "### Approximate cell decomposition\n",
     "\n",
     "Exact cell decomposition algorithms have been extended to 3D spaces with polyhedral obstacles, but in general require sophisticated geometric reasoning about how the free space is cut into convex polyhedra.  An alternative technique is *approximate cell decomposition*, in which we do not worry about creating a decomposition of the true free space, but rather create cells that are contained in the free space.\n",
