--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -6311,13 +6311,16 @@
     "    (if necessary) as single-precision floating point numbers, and desire a map with\n",
     "    spatial resolution of 5cm. \n",
     "\n",
-    "7.  A bounding volume hierarchy can be defined with different types of shapes.  Consider\n",
+    "7.  What is the relationship between a geometry representation's *resolution* and its *fidelity*?\n",
+    "    Are they equivalent concepts, unrelated, or does one determine the other? Or is the relationship more complex?  \n",
+    "\n",
+    "8.  A bounding volume hierarchy can be defined with different types of shapes.  Consider\n",
     "    the pros and cons of using 1) spheres, 2) axis-aligned bounding boxes, and 3) oriented boxes.\n",
     "    Which shape(s) is expected to have the tightest fit to the geometry?  Which shape(s) has the fastest\n",
     "    bounding volume / bounding volume collision test?  Which shape(s) do not need to be\n",
     "    explicitly updated when the geometry undergoes a rigid transformation?\n",
     "\n",
-    "8.  Experimentally investigate the running time of bounding volume\n",
+    "9.  Experimentally investigate the running time of bounding volume\n",
     "    hierarchy collision detection software. First, examine how\n",
     "    precomputation time varies with the complexity of the model. Is the\n",
     "    running time linear, quadratic, or something else? Next, examine how\n",
@@ -6325,7 +6328,7 @@
     "    proximity. Explain your observations in terms of how many bounding\n",
     "    volumes are checked.\n",
     "\n",
-    "9.  Write pseudocode for performing a ray-cast query for a triangle mesh in brute-force fashion.\n",
+    "10. Write pseudocode for performing a ray-cast query for a triangle mesh in brute-force fashion.\n",
     "    Assume a subroutine is available for computing ray-triangle intersections, called\n",
     "    `rayTriangleIntersect(a,b,triangle)` where `a` is the ray start point, `b` is a point along\n",
     "    the ray, and it returns the distance `d` to the intersection point if there is an intersection,\n",
@@ -6333,7 +6336,7 @@
     "    Then, write pseudocode for an accelerated version a using a bounding volume hierarchy. Assume\n",
     "    a subroutine is available for compute ray-BV intersections, called `rayBVIntersect(a,b,BV)`.\n",
     "\n",
-    "10. An autonomous vehicle or wheeled mobile robot will sense an environment\n",
+    "11. An autonomous vehicle or wheeled mobile robot will sense an environment\n",
     "    in 3D, but navigates essentially on a 2D semi-planar ground.  Suppose \n",
     "    that a laser sensor is used to provide information about the ground surface\n",
     "    and obstacles in the form of a 3D point cloud.  Suppose the robot knows where\n",
